--- a/vignettes/simulation_study.Rmd
+++ b/vignettes/simulation_study.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "4. Conduct a simulation study"
-author: "Matt Secrest, Yichen Lu, Isaac Gravestock"
+author: "Matt Secrest and Isaac Gravestock"
 output:
   rmarkdown::html_vignette:
     toc: true
@@ -55,133 +55,193 @@ create_simulation_obj(
 
 `data_matrix_list` is where you input the data you will be using for the
 simulation study using the function `sim_data_list()`.
-Let's simulate some data together for the sake of example.
-We'll use the `simsurv` package to generate survival data under three
-scenarios: a true hazard ratio (HR) for the treatment effect of 0.6, 0.8, and 1.0.
-Similarly we'll look at three drift HR scenarios: 0.5, 1.0, and 1.5.
 
-### `data_list`
+The first argument is a list of lists of matrices. At the highest level,
+we'll index different data generation parameters. At the lowest level,
+we'll index different matrices generated with these parameters.
 
-Looking at the arguments to `sim_data_list()`, the first argument, `data_list`
-requires a list of lists of matrices. Each list of matrices should represent
-a different data generation scenario, such as our difference true HR.
-Therefore, let's create an object `data_list` that is considers all combinations
-of true HRs of 0.6, 0.8, and 1.0 and drift HRs of 0.5, 1.0, and 1.5. That gives us
-9 total scenarios, and we'll simulate 20 datasets within each scenario.
+## `data_list`
 
-```{r}
+<b>Figure 1</b> below depicts an example `data_list` object. This object is a
+list of lists with two data generation scenarios (e.g., true
+HR of 1.0 and true HR of 0.8). Each scenario is arranged as a list of
+matrices that were generated according to that data generation scenario.
+
+<center>
+![Figure 1](data_list.jpg){width=80%}
+
+</center>
+
+We'll use the `simsurv` package to generate survival data and we'll 
+then put it in a similar format. In this example, we'll vary
+two data generation parameters: true HR and drift HR (the HR comparing
+external to internal controls). Suppose we have a function,
+`sim_single_matrix()` which can simulate data for a single matrix.
+
+That is:
+
+```{r class.source = "fold-hide"}
 library(simsurv)
-library(survival)
+# function to create a single matrix
+sim_single_matrix <- function(n = 500, # n simulated pts
+                              prob = c(
+                                0.1, # proportion internal control
+                                0.2, # proportion internal treated
+                                0.7
+                              ), # proportion external control
+                              hr = 0.70, # true HR for the treatment
+                              drift_hr = 1.0 # HR of external/internal
+) {
+  # checks
+  if (sum(prob) != 1.0) {
+    stop("prob must sum to 1")
+  }
 
-# Simulate a single matrix
-sim_single_matrix <- function(true_hr = 0.6,
-                              drift_hr = 1.0,
-                              n = 600) {
-  # Create a data frame with the subject IDs and treatment covariate
-  cov <- data.frame(
+  # data frame with the subject IDs and treatment group
+  df_ids <- data.frame(
     id = 1:n,
-    trt = rbinom(n, 1, 0.5)
+    ext = c(
+      rep(0L, n * (prob[1] + prob[2])),
+      rep(1L, n * prob[3])
+    ),
+    trt = c(
+      rep(0L, n * prob[1]),
+      rep(1L, n * prob[2]),
+      rep(0L, n * prob[3])
+    )
   )
-  cov$ext <- ifelse(cov$trt == 1L, 0L, rbinom(sum(cov$trt), 1, 0.5))
 
-  # Simulate the event times
-  dat <- simsurv(
+  # simulated event times
+  df_surv <- simsurv(
     lambdas = 0.1,
-    gammas = 1.5,
+    dist = "exponential",
     betas = c(
-      trt = log(true_hr),
+      trt = log(hr),
       ext = log(drift_hr)
     ),
-    x = cov,
-    maxt = 5
+    x = df_ids,
+    maxt = 50
   )
 
-  dat$censor <- 1 - dat$status
+  df_surv$censor <- 1 - df_surv$status
 
-  # Merge the simulated event times onto covariate data frame
-  dat <- merge(cov, dat)
-
-  as.matrix(dat)
+  # merge the simulated event times into data frame
+  df <- merge(df_ids, df_surv)
+  df <- df[, c("id", "ext", "trt", "eventtime", "status", "censor")]
+  colnames(df) <- c("id", "ext", "trt", "time", "status", "cnsr")
+  return(as.matrix(df))
 }
+```
 
-# Set seed
-set.seed(112233)
 
-# Create data list
-data_list <- list(
-  lapply(1:20, function(z) sim_single_matrix(true_hr = 0.6)),
-  lapply(1:20, function(z) sim_single_matrix(true_hr = 0.8)),
-  lapply(1:20, function(z) sim_single_matrix(true_hr = 1.0)),
-  lapply(1:20, function(z) sim_single_matrix(true_hr = 0.6, drift_hr = 1.5)),
-  lapply(1:20, function(z) sim_single_matrix(true_hr = 0.8, drift_hr = 1.5)),
-  lapply(1:20, function(z) sim_single_matrix(true_hr = 1.0, drift_hr = 1.5)),
-  lapply(1:20, function(z) sim_single_matrix(true_hr = 0.6, drift_hr = 0.5)),
-  lapply(1:20, function(z) sim_single_matrix(true_hr = 0.8, drift_hr = 0.5)),
-  lapply(1:20, function(z) sim_single_matrix(true_hr = 1.0, drift_hr = 0.5))
+```{r}
+head(sim_single_matrix(n = 500, hr = 0.5, drift_hr = 1.2))
+```
+
+Using this function, let's simulate a list of lists of matrices with four 
+scenarios:
+
+- True HR = 0.6, drift HR = 1.0
+- True HR = 1.0, drift HR = 1.0
+- True HR = 0.6, drift HR = 1.5
+- True HR = 1.0, drift HR = 1.5
+
+```{r}
+# Seed for reproducibility
+set.seed(123)
+
+# Number of simulations per scenario
+n <- 100
+
+# Create list of lists of data
+my_data_list <- list(
+  replicate(n,
+    sim_single_matrix(n = 250, hr = 0.6, drift_hr = 1.0),
+    simplify = FALSE
+  ),
+  replicate(n,
+    sim_single_matrix(n = 250, hr = 1.0, drift_hr = 1.0),
+    simplify = FALSE
+  ),
+  replicate(n,
+    sim_single_matrix(n = 250, hr = 0.6, drift_hr = 1.5),
+    simplify = FALSE
+  ),
+  replicate(n,
+    sim_single_matrix(n = 250, hr = 1.0, drift_hr = 1.5),
+    simplify = FALSE
+  )
 )
 ```
 
-As you can see, `data_list` is a list of list of matrices, the correct format
-for inputting into `sim_data_list()`:
+There are `r NROW(my_data_list)` scenarios.
 
 ```{r}
-str(data_list)
+NROW(my_data_list)
 ```
 
-At the lowest level are matrices of simulated data:
+Each scenario has `r n` matrices.
+
 ```{r}
-head(data_list[[1]][[1]])
+NROW(my_data_list[[1]])
+```
+
+The lowest level of the list of lists is a data matrix.
+
+```{r}
+head(my_data_list[[1]][[1]])
 ```
 
 ### `guide`
+
 In order to summarize the results from the different parameters in
 your simulation study, `psborrow2` needs to know how the simulation parameters
 differ. That is the purpose of the argument `guide`, which is a `data.frame`
 that distinguishes the simulation study parameters. Three columns are required
 in `guide`, though many more can be provided. The three required columns are:
-
+  
 * The true treatment effect (in our case a HR)
 * The true drift effect (in our case a HR). Drift effects >1 will mean
 that the external control arm experiences greater hazard than the internal
 control arm.
 * The name of a column that indexes the `data_list`
 
-We varied the true HR so that it took
-three values: 0.6, 0.8, and 1.0. We also varied  the drift HR so it took three
-values: 0.5, 1.0, and 1.5. Our guide should therefore be nine rows to represent
-the nine scenarios. We pass `c(1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L, 9L)` onto `index`
-to clarify that `data_list[[1L]]` corresponds to the settings in the first row,
-`data_list[[2L]]` to the second row, and so on.
+In this example, the `r NROW(my_data_list)` scenarios are
+summarized with the below `guide`:
 
 ```{r}
-guide <- data.frame(
-  trueHR = rep(c(0.6, 0.8, 1.0), 3),
-  driftHR = rep(c(1.0, 1.5, 0.5), each = 3),
-  index = 1L:9L
+my_sim_data_guide <- expand.grid(
+  true_hr = c(0.6, 1.0),
+  drift_hr = c("No drift HR", "Moderate drift HR")
 )
 
-guide
+my_sim_data_guide$id <- seq(1, NROW(my_sim_data_guide))
+
+my_sim_data_guide
 ```
+
+This guide implies that `my_sim_data_guide[[1]]` is a list of
+matrices where the treatment HR was 0.6 and the drift HR was 1.0.
 
 ### `effect`, `drift`, and `index`
 
 The last three inputs to `sim_data_list()`, `effect`, `drift`, and `index`
 are the column names in `guide` that correspond to the true treatment effect,
 true drift effect, and index of the `data_list` items, respectively.
-For our study, these are `"trueHR"`, `"driftHR"`, and `"index"`.
+For our study, these are `"true_hr"`, `"drift_hr"`, and `"id"`.
 
 Putting it all together, we can create an object of class `SimDataList`:
-
+  
 ```{r}
-sdl <- sim_data_list(
-  data_list,
-  guide,
-  "trueHR",
-  "driftHR",
-  "index"
+my_sim_data_list <- sim_data_list(
+  data_list = my_data_list,
+  guide = my_sim_data_guide,
+  effect = "true_hr",
+  drift = "drift_hr",
+  index = "id"
 )
 
-sdl
+my_sim_data_list
 ```
 
 ## `outcome`
@@ -192,12 +252,13 @@ or a list of `Outcome` class objects passed to `sim_outcome_list()`. For our
 example, let's just use a single exponential distribution.
 
 ```{r}
-out <- exp_surv_dist(
-  time_var = "eventtime",
-  cens_var = "censor",
+my_sim_out <- exp_surv_dist(
+  time_var = "time",
+  cens_var = "cnsr",
   baseline_prior = normal_prior(0, 1000)
 )
-out
+
+my_sim_out
 ```
 
 ## `borrowing`
@@ -205,30 +266,34 @@ out
 `borrowing` is where we input information on the type of borrowing we want to
 evaluate. This can be either a single object of class `Borrowing` or
 a list of objects created with `sim_borrowing_list()`. For the sake of example,
-let's assume we are interested in comparing three borrowing scenarios:
-
+let's assume we are interested in comparing four borrowing scenarios:
+  
 * No borrowing
-* BDB, conservative prior
-* BDB, aggressive prior
+* BDB, conservative hyperprior
+* BDB, aggressive hyperprior
+* Full borrowing
 
-We will create a borrowing list with `sim_borrowing_list()`.
+How do we specify that we want to evaluate multiple borrowing methods?
+We'll use a special list of `Borrowing` objects,
+which we'll create through the function `sim_borrowing_list()`.
 
 ```{r}
-sbl <- sim_borrowing_list(
+my_borrowing_list <- sim_borrowing_list(
   list(
     "No borrowing" = borrowing_details("No borrowing", "ext"),
-    "BDB, conservative prior" = borrowing_details("BDB", "ext", gamma_prior(0.001, 0.001)),
-    "BDB, aggressive prior" = borrowing_details("BDB", "ext", gamma_prior(1.000, 0.001))
+    "Full borrowing" = borrowing_details("Full borrowing", "ext"),
+    "BDB - conservative" = borrowing_details("BDB", "ext", gamma_prior(0.001, 0.001)),
+    "BDB - aggressive" = borrowing_details("BDB", "ext", gamma_prior(1, 0.001))
   )
 )
-sbl
-```
 
+my_borrowing_list
+```
 
 ## `covariate`
 
 `covariate` is for information on covariate adjustment details. This can be
-a single instance of class `Covariates` (from `add_covariates()` or a list of
+a single instance of class `Covariates` from `add_covariates()` or a list of
 `Covariates` objects created by `sim_covariate_list()` . This is also the only
 argument that is not required in `create_simulation_obj`. Let's leave
 this argument empty (i.e., let's not adjust for any covariates).
@@ -236,12 +301,14 @@ this argument empty (i.e., let's not adjust for any covariates).
 ## `treatment`
 
 `treatment` is where we input the treatment details for our simulation study.
-As with other inputs, this can be a single instance of a class (`Treatment`),
+As with other inputs, this can be a single instance of a class `Treatment`,
 or a list of these classes, created with `sim_treatment_list()`. Let's
 just use a single instance:
 
 ```{r}
-txd <- treatment_details("trt", normal_prior(0, 1000))
+my_sim_treat <- treatment_details("trt", normal_prior(0, 1000))
+
+my_sim_treat
 ```
 
 ## `create_simulation_obj()`
@@ -252,21 +319,24 @@ ready to sample on our behalf.
 
 ***Important:*** `psborrow2` will simulate the Cartesian product of all
 unique list elements in `data_matrix_list`, `outcome`, `borrowing`,
-`covariate`, and `treatment`. `data_matrix_list` contains nine
-different study parameters and therefore contains a list of length nine.
-`borrowing` has three scenarios and is a list of length three. The rest
-contain just one input (or 0 for `covariate`, which is equivalent to one
-scenario). This means we should expect $9 \times 3 = 27$ combinations of
-parameters. Let's create a simulation object of class `Simulation`:
+`covariate`, and `treatment`. We have `r NROW(my_sim_data_guide)` data
+generation scenarios and `r NROW(my_borrowing_list@guide)` borrowing
+scenarios. The other inputs just have one scenario (or 0 for `covariate`,
+which is equivalent to one scenario). This means we should expect
+`r NROW(my_sim_data_guide)` $\times$ `r NROW(my_borrowing_list@guide)`
+$=$ `r NROW(my_sim_data_guide) * NROW(my_borrowing_list@guide)`
+combinations of parameters. Let's create a simulation object of class
+`Simulation`:
 
 ```{r}
-sim_obj <- create_simulation_obj(
-  data_matrix_list = sdl,
-  outcome = out,
-  borrowing = sbl,
-  treatment = txd
+simulation_obj <- create_simulation_obj(
+  my_sim_data_list,
+  outcome = my_sim_out,
+  borrowing = my_borrowing_list,
+  treatment = my_sim_treat
 )
-sim_obj
+
+simulation_obj
 ```
 
 While we get a warning about the size of the simulation study, we are not worried
@@ -276,18 +346,13 @@ We can access the guide to see the specific scenarios that will be
 simulated with `show_guide()`:
 
 ```{r}
-show_guide(sim_obj)
+show_guide(simulation_obj)
 ```
 
 ## `mcmc_sample()`
 
 Now that we've created a simulation object, we're ready to call `mcmc_sample()`
-and generate draws for our model. For now, we will stick with the default inputs.
-
-***Note*** unlike an analysis on a single dataset, `mcmc_sample()` does not
-return a `CmdStanModel` object when applied to a simulation study object.
-Instead, it returns a class unique to simulation study results:
-`MCMCSimulationResult`.
+and generate draws for our model.
 
 ***Note*** there is one important additional argument to `mcmc_sample()` for
 simulation objects: `posterior_quantiles`. This numeric vector of length 2
@@ -297,8 +362,8 @@ specifies the quantiles for null coverage and true coverage. For instance,
 
 ```{r, include = FALSE}
 st <- Sys.time()
-results <- mcmc_sample(
-  sim_obj,
+simulation_res <- mcmc_sample(
+  simulation_obj,
   posterior_quantiles = c(0.025, 0.975),
   iter_warmup = 400,
   iter_sampling = 1000,
@@ -309,8 +374,9 @@ en <- Sys.time()
 ```
 
 ```{r, eval = FALSE}
-results <- mcmc_sample(
-  sim_obj,
+simulation_res <- mcmc_sample(
+  simulation_obj,
+  posterior_quantiles = c(0.025, 0.975),
   iter_warmup = 400,
   iter_sampling = 1000,
   chains = 1L,
@@ -318,69 +384,67 @@ results <- mcmc_sample(
 )
 ```
 
+
+***Note*** unlike an analysis on a single dataset, `mcmc_sample()` does not
+return a `CmdStanModel` object when applied to a simulation study object.
+Instead, it returns a class unique to simulation study results:
+`MCMCSimulationResult`.
+
+```{r}
+class(simulation_res)
+```
+
 This evaluation took about `r format(round(as.numeric(difftime(en, st, units = "min")), 1), nsmall=1)`
 minutes. Let's look at the performance of our simulation study by extracting the data.frame
 that summarizes results, `get_results()`:
 
 ```{r}
-results_df <- get_results(results)
-head(results_df)
+simulation_res_df <- get_results(simulation_res)
+head(simulation_res_df)
 ```
 
-Let's quickly visualize the results using `ggplot2`:
+Let's quickly visualize the results using `ggplot2`. We will first
+load `ggplot2` and factorize our borrowing scenarios:
 
-## Summary of results
+```{r}
+# Load ggplot2
+library(ggplot2)
 
-As an example of the types of visual summaries you can provide on simulation
-study results, let's explore performance of several some select metrics:
+# Factorize
+simulation_res_df$borrowing_scenario <- factor(simulation_res_df$borrowing_scenario,
+  levels = c(
+    "No borrowing",
+    "BDB - conservative",
+    "BDB - aggressive",
+    "Full borrowing"
+  )
+)
+```
 
 ### MSE
 
 ```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
-library(ggplot2)
-ggplot(results_df) +
-  geom_bar(aes(x = factor(trueHR), fill = borrowing_scenario, y = mse_mean), stat = "identity", position = "dodge") +
-  labs(
-    fill = "Borrowing scenario",
-    x = "True HR",
-    y = "MSE (mean)"
-  ) +
-  facet_wrap(~ paste0("drift HR = ", driftHR)) +
-  scale_fill_manual(values = c("#29339B", "#74A4BC", "#B6D6CC"))
-```
-
-From this graph, it is clear that the impact of aggressive borrowing
-depends greatly on the drift HR between the internal and external controls.
-
-### Null coverage
-
-Null coverage refers to the proportion of specified credible intervals
-(in this case, 95% credible intervals) that contain the null effect (1.0).
-When the true hazard ratio is not 1.0, this refers to the type II error proportion.
-
-```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
-ggplot(results_df[results_df$trueHR != 1.0, ]) +
-  geom_bar(aes(x = factor(trueHR), fill = borrowing_scenario, y = null_coverage),
+ggplot(simulation_res_df) +
+  geom_bar(aes(x = factor(true_hr), fill = borrowing_scenario, y = mse_mean),
     stat = "identity", position = "dodge"
   ) +
   labs(
     fill = "Borrowing scenario",
     x = "True HR",
-    y = "Type II error"
+    y = "MSE"
   ) +
-  facet_wrap(~ paste0("drift HR = ", driftHR)) +
-  scale_fill_manual(values = c("#29339B", "#74A4BC", "#B6D6CC"))
+  facet_wrap(~drift_hr) +
+  scale_fill_manual(values = c("#EF798A", "#F7A9A8", "#7D82B8", "#613F75"))
 ```
 
-The type II error proportion is higher when the true hazard ratio is 0.8 and
-generally when no borrowing is used.
+### Type I error
 
-When the true hazard ratio is equal to 1.0, this refers to the compliment of
-the type I error proportion, which we can use to derive type I error:
+Because we included a true HR of 1.0, we can evaluate type I error by looking
+at the compliment to the true parameter coverage:
 
 ```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
-ggplot(results_df[results_df$trueHR == 1.0, ]) +
-  geom_bar(aes(x = factor(driftHR), fill = borrowing_scenario, y = 1 - null_coverage),
+ggplot(simulation_res_df[simulation_res_df$true_hr == 1.0, ]) +
+  geom_bar(aes(x = factor(drift_hr), fill = borrowing_scenario, y = 1 - true_coverage),
     stat = "identity", position = "dodge"
   ) +
   labs(
@@ -388,26 +452,27 @@ ggplot(results_df[results_df$trueHR == 1.0, ]) +
     x = "drift HR",
     y = "Type I error"
   ) +
-  scale_fill_manual(values = c("#29339B", "#74A4BC", "#B6D6CC"))
+  scale_fill_manual(values = c("#EF798A", "#F7A9A8", "#7D82B8", "#613F75")) +
+  scale_y_continuous(breaks = seq(0, 1, .1), limits = c(0, 1)) +
+  geom_hline(aes(yintercept = 0.05), linetype = 2)
 ```
 
-### True coverage
+### Power
 
-True coverage refers to the proportion of simulations that contain
-the effect estimate of interest.
+We can include power by looking at the results for our true simulation of 0.6.
 
 ```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
-ggplot(results_df) +
-  geom_bar(aes(x = factor(trueHR), fill = borrowing_scenario, y = true_coverage),
+ggplot(simulation_res_df[simulation_res_df$true_hr == 0.6, ]) +
+  geom_bar(aes(x = factor(drift_hr), fill = borrowing_scenario, y = 1 - null_coverage),
     stat = "identity", position = "dodge"
   ) +
   labs(
     fill = "Borrowing scenario",
-    x = "True HR",
-    y = "True coverage"
+    x = "drift HR",
+    y = "Power"
   ) +
-  facet_wrap(~ paste0("drift HR = ", driftHR)) +
-  scale_fill_manual(values = c("#29339B", "#74A4BC", "#B6D6CC"))
+  scale_fill_manual(values = c("#EF798A", "#F7A9A8", "#7D82B8", "#613F75")) +
+  scale_y_continuous(breaks = seq(0, 1, .1), limits = c(0, 1)) +
+  geom_hline(aes(yintercept = 0.80), linetype = 2)
 ```
 
-It looks like almost all of our analyses captured the effect estimate of interest.
