--- a/vignettes/dataset.Rmd
+++ b/vignettes/dataset.Rmd
@@ -321,9 +321,8 @@ variable we are interested in by plotting histograms of the draws with the
 function `mcmc_hist()`. Let's do that for the Hazard ratio for the treatment
 effect and for our commensurability parameter, tau.
 
-```{r mcmc-hist, message = FALSE}
-library(bayesplot)
-mcmc_hist(draws, c("treatment HR", "commensurability parameter"))
+```{r mcmc-hist, message = FALSE, eval = requireNamespace("bayesplot")}
+bayesplot::mcmc_hist(draws, c("treatment HR", "commensurability parameter"))
 ```
 
 We can see other plots that help us understand and diagnose problems with
