--- a/design/Simulate_baseline_covariates.Rmd
+++ b/design/Simulate_baseline_covariates.Rmd
@@ -5,6 +5,8 @@ date: "2023-03-31"
 output: html_document
 ---
 
+# 1. Baseline Design
+
 To prepare for simulating survival data, we need to first create the baseline data for the cohort.
 
 Requirements:
@@ -38,9 +40,14 @@ baseline_obj <- sim_baseline(
 )
 ```
 
-# sim_baseline is enough to specify a cohort
+`sim_baseline` is enough to specify a cohort to generate survival times.
+Implementation of the above functions can be a first phase.
 
-# For survival we need to specify in addition:
+A second phase continues as below, with some further refinements.
+
+# 2. Survival Design
+
+For survival we need to specify in addition:
 
  - baseline hazard parameters
  - HR:
@@ -49,12 +56,17 @@ baseline_obj <- sim_baseline(
    - treatment effect HR
 
 ```{r}
+generate(baseline_obj()) %>%
+  mutate(age2 = age^2) %>%
+  design_matrix(~ sex + trt + ext)
 
-baseline_design <- design_matrix(baseline_obj, ~ sex + I(age^2) + trt + ext)
+baseline_design <- design_matrix(baseline_obj, ~ sex + I(age^2) + trt + ext, preprocess_fun = function(data) data)
+baseline_design2 <- design_matrix(baseline_obj, ~., preprocess_fun = function(data) data$age2 <- data$age^2)
 colnames(baseline_design)
 
+
 baseline_predictor <- linear_predictor(
-  design = baseline_design,
+  design = baseline_design, # matrix
   betas = c(
     sex = .3,
     "I(age^2)" = .4,
@@ -67,14 +79,23 @@ simulate_survival(
   baseline_predictor,
   hazard_model = weibull_ph(shape = 0.76, lambda = 1) # is a function that takes vector of LPs and gives vector of times
 )
+
+survival_matrix(
+  baseline_design,
+  surv_times = simulate_survival(baseline_predictor, hazard_model = weibull_ph(shape = 0.76, lambda = 1)),
+  censor_times = censor(),
+  recruitment = recruitment()
+)
 ```
+
+Refer to psborrow for how these can be calculated and combined.
 
 - recruitment rate
 - cut off
 - censoring
 
 
-# Functions
+# Appendix: Functions descriptions
 
 ```{r}
 # Specify covariates to include in baseline
@@ -125,13 +146,4 @@ sim_baseline(sample_size, covariates)
 # Construct design matrix
 # Maybe this should just be model.matrix()
 design_matrix()
-
-# Calculate Linear Predictor
-#
-# Takes design matrix and vector of betas and multiplies them
-#
-linear_predictor(matrix, betas)
-
-# Simulate Survival times
-#
 ```
